src/App.css
/*all css*/

* {
  font-family: Tahoma;
}

p {
  font-size: 18px;
  padding: 0 10px;
  text-align: center;

}

h2 {
  text-align: center;
  font-size: 35px;
  padding-top: 10px;
}

/*nav css*/

.logo {
  position: fixed;
  top: -20px;
  width: 100px;
  z-index: 10000;
}

.collapse {
  display: flex;
  justify-content: space-evenly;
}

.navbar-toggler {
  margin: 0 86%;
}

.nav-item {
  margin: 0 auto;
}

header {
  background-color: #355C7E;
}

.navbar .navbar-nav .nav-link {
  color: #FFFFFF;
  font-size: 1.1em;
}
.navbar .navbar-nav .nav-link:hover {
  color: #FFFFFF;
}
.navbar .navbar-nav .nav-item {
  position: relative;
}
.navbar .navbar-nav .nav-item::after {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  background-color: #FFFFFF;
  width: 0%;
  content: "";
  height: 2px;
  transition: all 0.5s;
}

.navbar .navbar-nav .nav-item:hover::after {
  width: 100%;
}

/*home css*/

.main-title {
  background-color: #355C7E;
  height: 400px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.home-approach {
  margin: 90px 0 90px 0;
}

.main-title h1 {
  text-align: center;
  color: #ffffff;
  font-size: 60px;
}

.services-container {
  background-color: rgb(197, 197, 197);
  text-align: center;
}

.services p {
  margin: auto 0;
  font-size: 20px;
}

a:visited, a:link {
  color: black;
}

.learnMore button a {
  color: white;
  text-decoration: none;
}

.learnMore button {
  background-color: black;
  font-size: 18px;
  margin: 20px 0;
  text-shadow: 1px 1px 1px grey;
}

.contact-container {
  background-color: #355C7E;
  color: white;
  text-align: center;
}

.contact-container button {
  background-color: #85c3d7;
  width: 300px;
  font-size: 18px;
  margin-bottom: 20px;
}

.contact-container button a {
  text-decoration: none;
}

.testimonial-rows {
  margin-top: 20px;
  align-items: center;
}

/*footer css*/

footer p {
  text-align: center;
  font-size: 18px;
}

.footer-links {
  display: flex;
  flex-direction: column;
}

.footer-links a {
  width: fit-content;
}

.contact-container h2 {
  width: 75%;
  margin: 40px auto;
}

.icon-links {
  display: flex;
  justify-content: space-evenly;
  margin: 0 auto;
  margin-top: -40px;
  margin-bottom: 20px;
  width: 300px;
}

.facebook-icon {
  color: #355C7E;
  height: 25px;
}

.instagram-icon {
  background-color: #355C7E;
  border-radius: 8px;
  color: white;
  width: 25px;
  height: 25px;
}

.twitter-icon {
  color: #355C7E;
  height: 25px;
}

.youtube-icon {
  color: #355C7E;
  height: 25px;
}

.footer-links {
  flex-direction: row;
  justify-content: space-evenly;
}

.footer-links a {
  width: 85px;
  text-align: center;
  padding-bottom: 20px;
}

small {
  font-size: 12px;
}

/*about css*/

.about-page {
  text-align: center;
}

.about-page h1 {
  font-size: 55px;
  width: 80%;
  margin: 0 auto;
}

.about-page p {
  width: 60%;
  margin: 20px auto;
}

.about-title {
  padding-top: 20px;
}

.headshot {
  border-radius: 50px 50px 50px 50px;
  width: 50%;
}

.about-bottom-border {
  border-bottom: 2px solid black;
  width: 75%;
  margin: 0 auto;
}

/*services page*/

.services-page {
  text-align: center;
}

.card-text {
  font-size: 1.1rem;
}

.row {
  margin-bottom: 15px;
}

.services-rates {
  margin-bottom: 20px;
}

.card-title {
  font-size: 20px;
}

.first-services-imgs img {
  margin-top: 30px;
  border-radius: 10px;
}

.services-page h2 {
  margin-top: 30px;
}

/* form css */

.form-group {
  text-align: left;
  color: #ffffff;
  padding: 15px;
  display: inline-block;
}

form {
  background-color: #355C7E;
}

form input {
  display: inline-block;
}

/* TEST  */

* {
  outline: 1px solid red;
  outline-offset: -1px;
}

